# 16_VectorLMD

./: .pre-comit-config.yaml  .pre-commit-config.yaml  create_missing_profiles.py  create_profile_table.py  db.sqlite3  download_font.py  download_fonts.py  hello.py  mig.bat  pyproject.toml  run.bat  settings.py  tailwind.config.js  urls.py
a/: settings.py  urls.py
apps/activities/: urls.py  views.py
apps/activities/templates/activities/: index.html
apps/authenticate/: forms.py  models.py  urls.py  views.py
apps/authenticate/management/commands/: create_missing_profiles.py
apps/authenticate/migrations/: 0001_initial.py  0002_alter_profile_user.py
apps/authenticate/templates/authenticate/: login.html  password_change.html  (+8 more)
apps/authenticate/templatetags/: custom_filters.py
apps/home/: forms.py  urls.py  views.py
apps/metrics/: urls.py  views.py
apps/news/: admin.py  apps.py  models.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py
apps/production/: models.py  urls.py  views.py
apps/production/migrations/: 0001_initial.py
config/: settings.py  urls.py
old/apps/: settings.py  urls.py
old/apps/home/: views.py
static/css/: custom.css  fonts.css  styles.css
staticfiles/: custom.css
staticfiles/admin/css/: base.css
templates/accounts/: profile.html
templates/cotton/base/: base.html  sidebar.html
templates/cotton/home/: apps_card.html
templates/cotton/production/: departments_card.html
templates/grappelli/admin/: base_site.html
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: base.html
(+15 files in other folders)
