[project]
name = "16-vectorlmd"
version = "0.1.0"
description = "Vector LMD - Lean manufacturing dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-cotton>=2.0.3",
    "django-crispy-forms>=2.4",
    "django-graphiql>=0.4.4",
    "django-grappelli>=4.0.1",
    "django-htmx>=1.23.0",
    "djhtml>=3.0.7",
    "djlint>=1.36.4",
    "faker>=37.1.0",
    "graphene-django>=3.2.3",
    "pillow>=11.2.1",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
